[gd_scene load_steps=19 format=2]

[ext_resource path="res://selector.png" type="Texture" id=1]
[ext_resource path="res://CharacterSelector.gd" type="Script" id=2]
[ext_resource path="res://MenuTheme.tres" type="Theme" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "unselected",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 16, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "highlight",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "select",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 16, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 40, 24, 16, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "highlight",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "select",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 8, 8, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 8, 8, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "highlight",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "select",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 88, 8, 8, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 56, 8, 8, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "highlight",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "select",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="CharacterSelector" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "unselected"
centered = false

[node name="Player1" type="AnimatedSprite" parent="."]
position = Vector2( 8, 0 )
frames = SubResource( 5 )
animation = "select"
centered = false

[node name="Player2" type="AnimatedSprite" parent="."]
position = Vector2( 8, 24 )
frames = SubResource( 6 )
animation = "select"
centered = false

[node name="Player3" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
frames = SubResource( 9 )
animation = "select"
centered = false

[node name="Player4" type="AnimatedSprite" parent="."]
position = Vector2( 24, 8 )
frames = SubResource( 12 )
animation = "select"
centered = false

[node name="Aminal" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
frames = SubResource( 15 )
animation = "idle"
centered = false

[node name="Label" type="Label" parent="."]
margin_top = 33.0
margin_right = 32.0
margin_bottom = 47.0
theme = ExtResource( 3 )
align = 1
